Fix: fix border fracture in dropdown by applying bgcolor behind

--- a/components/common/navbar/NormalNavBar.module.scss
+++ b/components/common/navbar/NormalNavBar.module.scss
@@ -138,7 +138,8 @@
                 }
 
                 .dropdown-body {
-                    border-radius: 8px 8px 0 0;
+                    border-radius: 8px;
+                    background-color: white;
                 }
 
                 .dropdown-footer {
